- restructuring data loading to work through splits